Kubernetes/Task3/minio-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: minio-ingress-svc
  name: minio-ingress-svc
spec:
  ports:
  - port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: minio-ingress-svc
             port:
                number: 9001
      - path: "/web"
        pathType: Prefix
        backend:
          service:
            name: web-headless
            port:
              number: 80
